Updated Simplified Chinese translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,8 +56,9 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
   * Traditional Chinese (Anthony Wong). Closes: #415230
+  * Simplified Chinese (Anthony Wong). Closes: #415320
 
- -- Christian Perrier <bubulle@debian.org>  Sat, 17 Mar 2007 12:46:46 +0100
+ -- Christian Perrier <bubulle@debian.org>  Sun, 18 Mar 2007 14:12:00 +0100
 
 dpkg (1.13.25) unstable; urgency=low
 
