--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-18  Anthony Wong  <me@ypwong.org>
+
+	* zh_CN.po: Updated to 918t2f
+
 2007-03-17  Anthony Wong  <me@ypwong.org>
 
 	* zh_TW.po: Update for one string. Closes: #415230
