Updated the Polish translations.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-18  Robert Luberda
+
+	* pl.po: Updated to 920t
+
 2007-03-18  Anthony Wong  <me@ypwong.org>
 
 	* zh_CN.po: Updated to 918t2f
