--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-18  Robert Luberda <robert@debian.org>
+
+	* po/pl.po: Update to 878t92f308u
+
 2007-03-13  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-deb.1: Move '-z' to it's own OPTIONS entry. Document '-Z',
