Add '.hg' to the default dpkg-source -i regex. Closes: #414794

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Thanks to Frank Lichtenheld.
   * Add '.gitignore' to the default dpkg-source -i regex. Closes: #409566
     Thanks to Julien Cristau.
+  * Add '.hg' to the default dpkg-source -i regex. Closes: #414794
   * Use l10n-friendlier strings to describe dependencies. Closes: #390916
     Thanks to Ian Jackson.
   * Change priority for dpkg-dev from standard to optional to match the
