--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-20  Robert Luberda <robert@debian.org>
+
+	* po/pl.po: Update to 974t18f286u
+
 2007-03-18  Robert Luberda <robert@debian.org>
 
 	* po/pl.po: Update to 878t92f308u
