--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-21  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.16.1.
+
 2007-03-20  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add '.hg'.
