--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
+	* Makefile.in.in: Updated from gettext 0.16.1.
+
+2007-03-21  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-dev.pot: Regenerated.
 
 2006-12-04  Jordi Mallach  <jordi@debian.org>
