* dselect/method.h: Fix typo in copyright year ('20001'-> '2001').

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
+	* dselect/method.h: Fix typo in copyright year ('20001'-> '2001').
+
+2007-03-21  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac (AM_GNU_GETTEXT_VERSION): Quote the argument.
 	(AC_CHECK_HEADERS): Check for 'locale.h'.
 	* lib/gettext.h: Updated file from gettext 0.16.1.
