--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
+	* dselect/main.cc: Remove duplicated included files <sys/types.h> and
+	<sys/stat.h>. Move <fcntl.h> to the system block.
+
+2007-03-21  Guillem Jover  <guillem@debian.org>
+
 	* dselect/method.h: Fix typo in copyright year ('20001'-> '2001').
 
 2007-03-21  Guillem Jover  <guillem@debian.org>
