Switch from pseudo-tags to usertags, and update the documentation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Show the epoch (if present) when displaying package versions.
     Closes: #107449, #179913, #345594, #393924, #405668
     Based on a patch by Jeffrey W. Baker.
+  * Switch from pseudo-tags to usertags, and update the documentation.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
