--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-23  Guillem Jover  <guillem@debian.org>
+
+	* debian/pseudo-tags: Renamed to ...
+	* debian/usertags: ... this. Updated with the usertags information.
+	* debian/dpkg.docs: Install usertags instead of pseudo-tags.
+
 2007-03-21  Jeffrey W. Baker  <jwbaker@acm.org>
             Guillem Jover  <guillem@debian.org>
 
