Add support for PAM sessions in start-stop-daemon.

--- a/debian/changelog
+++ b/debian/changelog
@@ -59,6 +59,10 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Based on a patch by Jeffrey W. Baker.
   * Switch from pseudo-tags to usertags, and update the documentation.
 
+  [ Nicolas François ]
+  * Add support for PAM sessions in start-stop-daemon.
+    Closes: #376165, #406942
+
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
   * Traditional Chinese (Anthony Wong). Closes: #415230
