--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* start-stop-daemon.8: Document the new --pam flag.
+
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
