--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* m4/libs.m4: Fix typo (supoprt->support).
+
+2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* utils/start-stop-daemon.c: Add support for PAM sessions.
 	* utils/Makefile.am: Link start-stop-daemon with the PAM libraries.
 	* m4/libs.m4: Add new test: DPKG_LIB_PAM. Defines WITH_PAM (by
