Fix typo in German dpkg man page. Closes: #416167 Thanks to Martin Weis.

--- a/debian/changelog
+++ b/debian/changelog
@@ -58,6 +58,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Closes: #107449, #179913, #345594, #393924, #405668
     Based on a patch by Jeffrey W. Baker.
   * Switch from pseudo-tags to usertags, and update the documentation.
+  * Fix typo in German dpkg man page. Closes: #416167
+    Thanks to Martin Weis.
 
   [ Nicolas François ]
   * Add support for PAM sessions in start-stop-daemon.
