--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2007-03-20 23:52+0200\n"
-"PO-Revision-Date: 2006-07-23 14:35+0200\n"
+"PO-Revision-Date: 2007-03-26 04:05+0300\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2377,7 +2377,7 @@ msgstr ""
 "B<dpkg -s> | B<--status> I<Paketname> ...\n"
 "    Berichte den Status der spezifizierten Pakete.\n"
 "B<dpkg -L> | B<--listfiles> I<Paket> ...\n"
-"    Liste die aus B<Paket> auf Ihrem System installierten Pakete auf.\n"
+"    Liste die aus B<Paket> auf Ihrem System installierten Dateien auf.\n"
 "B<dpkg -S> | B<--search> I<Dateinamen-Suchmuster> ...\n"
 "    Suche nach einem Dateinamen in installierten Paketen.\n"
 "B<dpkg -p> | B<--print-avail> I<Paket>\n"
