--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-26  Martin Weis  <Martin.Weis.newsadress@gmx.de>
+
+	* po/de.po: Fix typo ('Pakete' -> 'Dateien').
+
 2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* start-stop-daemon.8: Document the new --pam flag.
