Updated Dutch translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -70,11 +70,15 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Traditional Chinese (Anthony Wong). Closes: #415230
   * Simplified Chinese (Anthony Wong). Closes: #415320
   * Polish (Robert Luberda).
+  * Dutch (Bart Cornelis).
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
 
- -- Christian Perrier <bubulle@debian.org>  Sun, 18 Mar 2007 14:12:00 +0100
+  [ Updated dselect translations ]
+  * Dutch (Bart Cornelis).
+
+ -- Bart Cornelis (cobaco) <cobaco@linux.be>  Wed, 28 Mar 2007 10:25:09 +0200
 
 dpkg (1.13.25) unstable; urgency=low
 
