Added Marathi translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -67,6 +67,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Simplified Chinese (Anthony Wong). Closes: #415320
   * Polish (Robert Luberda).
   * Dutch (Bart Cornelis).
+  * Marathi added (Priti Patil). Closes: #416810
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
@@ -74,7 +75,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   [ Updated dselect translations ]
   * Dutch (Bart Cornelis).
 
- -- Bart Cornelis (cobaco) <cobaco@linux.be>  Wed, 28 Mar 2007 10:25:09 +0200
+ -- Christian Perrier <bubulle@debian.org>  Sun, 01 Apr 2007 17:04:20 +0200
 
 dpkg (1.13.25) unstable; urgency=low
 
