--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
-2007-03-28 Bart Cornelis <cobaco@skolelinux.no>
+2007-04-01  Priti Patil  <prithisd@gmail.com>
+	
+	* mr.po: Added translation. Closes: #416810
+
+2007-03-28  Bart Cornelis  <cobaco@skolelinux.no>
+	
 	* nl.po: Updated translation
 
 2007-03-21  Guillem Jover  <guillem@debian.org>
