Properly sort Uploaders field in generated .dsc files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Switch from pseudo-tags to usertags, and update the documentation.
   * Fix typo in German dpkg man page. Closes: #416167
     Thanks to Martin Weis.
+  * Properly sort Uploaders field in generated .dsc files.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
