--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-03  Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-source.pl (fieldimps): Add 'Uploaders'.
+
 2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* m4/libs.m4: Fix typo (supoprt->support).
