* scripts/dpkg-checkbuilddeps.pl ($control): Remove redundant 	variable.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-04-03  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-checkbuilddeps.pl ($control): Remove redundant
+	variable.
+
+2007-04-03  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-source.pl (fieldimps): Add 'Uploaders'.
 
 2007-03-25  Nicolas François  <nicolas.francois@centraliens.net>
