* scripts/controllib.pl (warn): Rename to ... 	(warning): ... this, to avoid collisions with the perl builtin. Fix 	all users.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-04-03  Guillem Jover  <guillem@debian.org>
 
+	* scripts/controllib.pl (warn): Rename to ...
+	(warning): ... this, to avoid collisions with the perl builtin. Fix
+	all users.
+
+2007-04-03  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl: Use defined instead of length, when variables
 	might be undefined.
 	* scripts/update-alternatives.pl: Likewise.
