* dpkg-genchanges.pl: Mark string for translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2007-04-03  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-genchanges.pl: Mark string for translation.
+
+2007-04-03  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl (warn): Rename to ...
 	(warning): ... this, to avoid collisions with the perl builtin. Fix
 	all users.
