--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-04-07  Erdal Ronahi  <erdal.ronahi@gmail.com>
+	
+	* ku.po: Added translation. Closes: #418154
+
 2007-04-01  Priti Patil  <prithisd@gmail.com>
 	
 	* mr.po: Added translation. Closes: #416810
