Reorder a bit fields in output files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Fix typo in German dpkg man page. Closes: #416167
     Thanks to Martin Weis.
   * Properly sort Uploaders field in generated .dsc files.
+  * Reorder a bit fields in output files.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petrișor).
