Make all perl scripts use strict and warnings, to ease catching errors.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,27 @@
 2007-04-11  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-parsechangelog.pl: Use static and warnings. Declare
+	variables with 'my'.
+	* scripts/dpkg-scansources.pl: Likewise.
+	* scripts/controllib.pl: Likewise. Globals with 'our'.
+	* scripts/822-date.pl: Likewise.
+	* scripts/dpkg-architecture.pl: Likewise.
+	* scripts/dpkg-checkbuilddeps.pl: Likewise.
+	* scripts/dpkg-distaddfile.pl: Likewise.
+	* scripts/dpkg-genchanges.pl: Likewise.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/dpkg-shlibdeps.pl: Likewise.
+	* scripts/dpkg-source.pl: Likewise.
+	* scripts/controllib.pl (parsecdata): Use 'my' instead of 'local'.
+	(subprocerr): Likewise.
+	(debian_arch_fix): Likewise.
+	* scripts/dpkg-architecture.pl (debian_to_gnu): Likewise.
+	(gnu_to_debian): Likewise.
+	* scripts/controllib.pl (getfowner): Remove redundant closures of
+	STDIN.
+
+2007-04-11  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl (@pkg_dep_fields): Reorder fields by
 	importance.
 	(set_field_importance): New function.
