--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Do not bail out in dpkg when building without start-stop-daemon support,
     by checking if the macro value is true instead of it being defined.
     Thanks to Mark Rosenstand.
-  * Make some perl scripts use static and warnings, to ease catching errors.
+  * Make all perl scripts use strict and warnings, to ease catching errors.
   * Add a missing newline to a warning message in dpkg. Closes: #390914
     Thanks to Ian Jackson.
   * Fix typo in variable name in dpkg-source which was causing it to not
