Speed up dpkg-shlibdeps by avoiding doing a dpkg-query for duped libraries. Thanks to Aaron M. Ucko. Closes: #421290

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     Thanks to Martin Weis.
   * Properly sort Uploaders field in generated .dsc files.
   * Reorder a bit fields in output files.
+  * Speed up dpkg-shlibdeps by avoiding doing a dpkg-query for duped
+    libraries. Thanks to Aaron M. Ucko. Closes: #421290
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petri?or).
