* scripts/update-alternatives.pl: Move the ENOENT errno check from 	the if conditionals to the block body to avoid comparing against an 	undef value on the next elsif conditional.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-05-02  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Move the ENOENT errno check from
+	the if conditionals to the block body to avoid comparing against an
+	undef value on the next elsif conditional.
+
 2007-04-28  Aaron M. Ucko  <ucko@debian.org>
 
 	* scripts/dpkg-shlibdeps.pl (unique_libfiles): New variable. Do not
