* po/add_de/deb-shlibs.5.de.add: New dummy file. 	* po/add_de/dpkg-distaddfile.1.de.add: Likewise. 	* po/de.po: Merged from master files.

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -186,8 +186,8 @@ msgid ""
 "based on an earlier version by Ian Jackson and was also put in the public "
 "domain."
 msgstr ""
-"B<822-date> ist tatsächlich eine wirklich einfache Aufrufhülle um B<date>(1). "
-"Aufgrund seiner Einfachheit kann der Code wahrscheinlich nicht "
+"B<822-date> ist tatsächlich eine wirklich einfache Aufrufhülle um B<date>"
+"(1). Aufgrund seiner Einfachheit kann der Code wahrscheinlich nicht "
 "urheberrechtlich geschützt werden und sollte als Teil des »Public Domain« "
 "betrachtet werden. Diese Handbuchseite wurde von Frank Lichtenheld "
 "geschrieben und basiert auf einer früheren Version von Ian Jackson die auch "
@@ -6083,9 +6083,9 @@ msgid ""
 "and is not easily machine-readable. See B<-W> (B<--show>)  and B<--"
 "showformat> for a way to configure the output format."
 msgstr ""
-"Das Ausgabeformat dieser Option kann nicht konfiguriert werden, variiert aber "
-"automatisch mit der Terminalbreite. Die Ausgabe ist für menschliche Leser "
-"gedacht und nicht leicht maschinenlesbar. Lesen Sie über die Optionen "
+"Das Ausgabeformat dieser Option kann nicht konfiguriert werden, variiert "
+"aber automatisch mit der Terminalbreite. Die Ausgabe ist für menschliche "
+"Leser gedacht und nicht leicht maschinenlesbar. Lesen Sie über die Optionen "
 "B<-W> (B<--show>) und B<--showformat>, um das Ausgabeformat zu konfigurieren."
 
 # type: TP
@@ -6116,8 +6116,8 @@ msgid ""
 "Report status of specified package. This just displays the entry in the "
 "installed package status database."
 msgstr ""
-"Berichte Zustand des angegebenen Paketes. Dies zeigt nur den Eintrag in "
-"der Datenbank der Zustände der installierten Pakete."
+"Berichte Zustand des angegebenen Paketes. Dies zeigt nur den Eintrag in der "
+"Datenbank der Zustände der installierten Pakete."
 
 # type: TP
 #: dpkg-query.1:44
@@ -7349,9 +7349,9 @@ msgid ""
 "This overrides the default for a manual reassembly (B<--join>)  and is "
 "mandatory for an automatic queue-or-reassemble (B<--auto>)."
 msgstr ""
-"Dies hebt die Voreinstellung für ein manuelles Wiederzusammenbauen auf "
-"(B<--join>) und ist zwingend für ein automatisches Einreihen-oder-"
-"Zusammenbauen (B<--auto>) notwendig."
+"Dies hebt die Voreinstellung für ein manuelles Wiederzusammenbauen auf (B<--"
+"join>) und ist zwingend für ein automatisches Einreihen-oder-Zusammenbauen "
+"(B<--auto>) notwendig."
 
 # type: TP
 #: dpkg-split.1:155
@@ -7417,8 +7417,8 @@ msgid ""
 "are not binary package parts."
 msgstr ""
 "Ein Rückgabewert von 0 zeigt an, dass das angeforderte Aufteilen, "
-"Zusammenfügen oder anderer Befehl erfolgreich war. B<--info>-Befehle "
-"werden als erfolgreich gewertet, sogar fals die Dateien keine Teile eines "
+"Zusammenfügen oder anderer Befehl erfolgreich war. B<--info>-Befehle werden "
+"als erfolgreich gewertet, sogar fals die Dateien keine Teile eines "
 "Binärpaketes waren."
 
 # type: Plain text
@@ -7439,8 +7439,8 @@ msgid ""
 msgstr ""
 "Ein Rückgabewert von 2 zeigt eine bestimmte Gattung von Problemen an, wie "
 "zum Beispiel ein Fehlschlag eines Systemaufrufs, eine Datei, die wie ein "
-"Paketteil aussah aber beschädigt war, ein Benutzungsfehler oder einige andere "
-"Probleme."
+"Paketteil aussah aber beschädigt war, ein Benutzungsfehler oder einige "
+"andere Probleme."
 
 # type: Plain text
 #: dpkg-split.1:204
@@ -7476,9 +7476,9 @@ msgid ""
 "control information of the contained binary package file, and it is not "
 "present in the filenames generated."
 msgstr ""
-"Die Architektur wird nicht im Kopf der Teil-Dateien dargestellt, nur in "
-"den Kontroll-Informationen der enthaltenen Binärpaket-Datei, und sie ist "
-"nicht in den erzeugten Dateinamen wiedergegeben."
+"Die Architektur wird nicht im Kopf der Teil-Dateien dargestellt, nur in den "
+"Kontroll-Informationen der enthaltenen Binärpaket-Datei, und sie ist nicht "
+"in den erzeugten Dateinamen wiedergegeben."
 
 # type: TP
 #: dpkg-split.1:216
@@ -7501,9 +7501,9 @@ msgid ""
 "split> and are unlikely to be useful to other programs, and in any case the "
 "filename format should not be relied upon."
 msgstr ""
-"Die in diesem Verzeichnis benutzten Dateinamen liegen in einem intern "
-"B<dpkg-split>-Format vor und sind sehr wahrscheinlich für andere Programme "
-"nicht nützlich, und in keinem Fall sollte sich auf das Format der Dateinamen "
+"Die in diesem Verzeichnis benutzten Dateinamen liegen in einem intern B<dpkg-"
+"split>-Format vor und sind sehr wahrscheinlich für andere Programme nicht "
+"nützlich, und in keinem Fall sollte sich auf das Format der Dateinamen "
 "verlassen werden."
 
 # type: Plain text
@@ -7522,8 +7522,8 @@ msgstr ""
 "B<dpkg-split> und diese Handbuchseite wurden von Ian Jackson geschrieben. "
 "Sie unterliegen dem Copyright (C) 1995-1996 von ihm und sind unter der GNU "
 "General Public License Version 2 oder neuer veröffentlicht; es gibt KEINE "
-"HAFTUNG. Lesen Sie I</usr/share/doc/dpkg/copyright> und I</usr/share/"
-"common-licenses/GPL> für Details."
+"HAFTUNG. Lesen Sie I</usr/share/doc/dpkg/copyright> und I</usr/share/common-"
+"licenses/GPL> für Details."
 
 # type: TH
 #: dpkg-statoverride.8:1
@@ -8873,8 +8873,8 @@ msgid ""
 "If there is already an entry for the Info file being installed it is "
 "replaced in situ with the new entry."
 msgstr ""
-"Falls es bereits einen Eintrag für die zu installierende Infodatei gibt, wird "
-"dieser in situ durch den neuen Eintrag ersetzt."
+"Falls es bereits einen Eintrag für die zu installierende Infodatei gibt, "
+"wird dieser in situ durch den neuen Eintrag ersetzt."
 
 # type: Plain text
 #: install-info.8:154
@@ -8892,8 +8892,8 @@ msgid ""
 "section headings at all then B<install-info> will create both the requested "
 "section and a Miscellaneous section at the end of the file."
 msgstr ""
-"Falls beim Hinzufügen eines Eintrags ein Abschnitt angefordert wird, aber die "
-"Datei überhaupt keine Abschnittsüberschriften enthält, erzeugt B<install-"
+"Falls beim Hinzufügen eines Eintrags ein Abschnitt angefordert wird, aber "
+"die Datei überhaupt keine Abschnittsüberschriften enthält, erzeugt B<install-"
 "info> sowohl den angeforderten als auch einen Abschnitt für Verschiedenes am "
 "Ende der Datei."
 
@@ -9001,7 +9001,6 @@ msgstr ""
 "Infodatei selbst angegebenen Wert zu benutzen; dieser wird gefunden, indem "
 "nach einem Abschnitt der folgenden Form gesucht wird:"
 
-
 # type: Plain text
 #: install-info.8:214
 msgid "B<START-INFO-DIR-ENTRY>"
@@ -9043,7 +9042,8 @@ msgstr ""
 # type: Plain text
 #: install-info.8:236
 msgid "It is an error for none of these methods to yield a description."
-msgstr "Es ist ein Fehler, wenn keine dieser Methoden eine Beschreibung ergibt."
+msgstr ""
+"Es ist ein Fehler, wenn keine dieser Methoden eine Beschreibung ergibt."
 
 # type: Plain text
 #: install-info.8:240
@@ -9070,9 +9070,9 @@ msgid ""
 "the menu entry in the Info file."
 msgstr ""
 "Gibt an, dass der Eintrag im Menü I<xxx> sein soll. Die Voreinstellung ist, "
-"den in der Info-Datei selbst angegebenen Wert zu benutzen. Falls dieser nicht "
-"vorhanden ist, wird der Basisname der Info-Datei benutzt (jegliches B<.info> "
-"wird gelöscht, und der Eintrag wird in gemischte Groß-Klein-Schreibung "
+"den in der Info-Datei selbst angegebenen Wert zu benutzen. Falls dieser "
+"nicht vorhanden ist, wird der Basisname der Info-Datei benutzt (jegliches B<."
+"info> wird gelöscht, und der Eintrag wird in gemischte Groß-Klein-Schreibung "
 "überführt). Für Details über das erwartete Format des Menüeintrags in der "
 "Info-Datei siehe oben."
 
