--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2007-05-02  Guillem Jover  <guillem@debian.org>
+
+	* po/add_de/deb-shlibs.5.de.add: New dummy file.
+	* po/add_de/dpkg-distaddfile.1.de.add: Likewise.
+	* po/de.po: Merged from master files.
+
 2007-04-11  Guillem Jover  <guillem@debian.org>
 
 	* Makefile.am (man.stamp): Use a stamp file for now until po4a
