--- a/po/fr.po
+++ b/po/fr.po
@@ -18,13 +18,13 @@
 # Copyright (C) 2000, 2001, 2002 Martin Quinson <Martin.Quinson@tuxfamily.org>
 #
 # Christian Perrier <bubulle@debian.org>, 2005, 2006.
-# Frederic Bothamy <frederic.bothamy@free.fr>, 2006.
+# Frederic Bothamy <frederic.bothamy@free.fr>, 2006, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-20 23:55+0200\n"
-"PO-Revision-Date: 2006-09-05 07:06+0100\n"
+"PO-Revision-Date: 2007-05-02 22:30+0200\n"
 "Last-Translator: Frederic Bothamy <frederic.bothamy@free.fr>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -117,9 +117,9 @@ msgid "Signal no.%d"
 msgstr "Signal n° %d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s : échec de l'exécution de gzip %s"
+msgstr "%s : échec de l'exécution de « %s %s »"
 
 #: lib/compression.c:62
 #, c-format
@@ -1203,7 +1203,7 @@ msgstr ""
 #: src/archives.c:903
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "le paquet %s a trop de paires Conflicts/Replaces"
 
 #: src/archives.c:909
 #, c-format
@@ -1685,39 +1685,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "impossible de vérifier l'existence de « %.250s »"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " dépend de "
+msgstr "%s dépend de %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " pré-dépend de "
+msgstr "%s pré-dépend de %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " recommande "
+msgstr "%s recommande %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " suggère "
+msgstr "%s suggère %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " casse (« breaks »)"
+msgstr "%s casse (« breaks ») %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " entre en conflit avec "
+msgstr "%s entre en conflit avec %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " étend "
+msgstr "%s améliore %s"
 
 #: src/depcon.c:269
 #, c-format
@@ -3032,13 +3032,13 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "impossible d'analyser un autre nouveau fichier « %.250s »"
 
 #: src/processarc.c:674
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
 msgstr ""
-"dpkg : avertissement - l'ancien fichier « %.250s » est identique\n"
-"à plusieurs nouveaux fichiers (à la fois « %.250s » et « %.250s »)"
+"dpkg : avertissement - l'ancien fichier « %.250s » est identique à plusieurs "
+"nouveaux fichiers (à la fois « %.250s » et « %.250s »)\n"
 
 #: src/processarc.c:715
 #, c-format
@@ -3522,7 +3522,7 @@ msgstr "dpkg-deb - erreur : %s (« %s ») ne contient pas de chiffres\n"
 #: dpkg-deb/build.c:111
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "le nom de fichier « %.50s... » est trop long"
 
 #: dpkg-deb/build.c:172
 msgid "--build needs a directory argument"
@@ -4115,7 +4115,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -4133,13 +4133,13 @@ msgstr ""
 "Options :\n"
 "  --showformat=<format>  Utiliser un formatage alternatif pour --show.\n"
 "  -D                     Activer la sortie de débogage.\n"
-"  --old|--new            Contrôler le format d'archive .\n"
+"  --old, --new           Contrôler le format d'archive.\n"
 "  --no-check             Supprimer la vérification du fichier control\n"
 "                         (construit des paquets abîmés).\n"
 "  -z#                    Utiliser la compression lors de la construction.\n"
 "  -Z<type>               Indiquer le type de compression utilisée\n"
-"                         pour la construction\n"
-"                         valeurs possibles : gzip, bzip2, none\n"
+"                         pour la construction.\n"
+"                         Valeurs possibles : gzip, bzip2, lzma, none.\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -5337,7 +5337,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:78
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5399,7 +5399,7 @@ msgstr ""
 "<nom>.\n"
 "  --all                    exécuter --config pour toutes les alternatives.\n"
 "\n"
-"<lien> est le lien symbolique pointant vers /etc/alternatives/<nom>.\n"
+"<lien> est le lien symbolique pointant vers %s/<nom>.\n"
 "  (par exemple, /usr/bin/pager)\n"
 "<nom> est le nom principal pour ce groupe de liens.\n"
 "  (par exemple, pager)\n"
