Add info about French translation update to debian/changelog and po/ChangeLog

--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Dutch (Bart Cornelis).
   * Marathi added (Priti Patil). Closes: #416810
   * Kurdish added (Erdal Ronahi). Closes: #418154
+  * French (Frédéric Bothamy).
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
