--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-04  Frédéric Bothamy  <frederic.bothamy@free.fr>
+
+	* fr.po: Updated to 920t
+
 2007-04-07  Erdal Ronahi  <erdal.ronahi@gmail.com>
 	
 	* ku.po: Added translation. Closes: #418154
