Update the Polish translations.

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-04  Robert Luberda  <robert@debian.org>
+
+	* pl.po: Updated to 285t.
+
 2007-03-28 Bart Cornelis <cobaco@skolelinux.no>
 	* nl.po: Updated translation
 
