--- a/dselect/po/pl.po
+++ b/dselect/po/pl.po
@@ -2,19 +2,19 @@
 # Copyright (C) 1999 Free Software Foundation, Inc.
 # Piotr Roszatycki <dexter@debian.org>, 1999.
 # Bartosz Feñski <fenio@debian.org>, 2004-2005
+# Robert Luberda <robert@debian.org>, 2006-2007
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.13.19\n"
+msgstr "Project-Id-Version: dpkg 1.14.0\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-20 23:56+0200\n"
-"PO-Revision-Date: 2006-05-04 22:15+0200\n"
+"PO-Revision-Date: 2007-05-04 22:37+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 ||"
+" n%100>=20) ? 1 : 2;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
 
 #: dselect/basecmds.cc:121
 msgid "Search for ? "
@@ -140,9 +140,8 @@ msgstr ""
 "\n"
 
 #: dselect/baselist.cc:259
-#, fuzzy
 msgid "Keybindings"
-msgstr "skojarzenia klawiszy"
+msgstr "Skojarzenia klawiszy"
 
 #: dselect/baselist.cc:307
 #, c-format
@@ -301,7 +300,6 @@ msgid "Keystrokes"
 msgstr "Spis klawiszy"
 
 #: dselect/helpmsgs.cc:25
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -333,18 +331,18 @@ msgid ""
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
 "Klawisze ruchu: Nastêpny/Poprzedni, Góra/Dó³, Do góry/W dó³:\n"
-"  Strza³ka-w-dó³, n     Strza³ka-do-góry, k     ruch kursora\n"
-"  N, Page-down, Spacja  P, Page-up, Backspace   przewiniêcie listy o 1 "
+"  j, Strza³ka-w-dó³,    k, Strza³ka-do-góry,  ruch kursora\n"
+"  N, Page-down, Spacja  P, Page-up, Backspace przewiniêcie listy o 1 "
 "ekran\n"
-"  ^n                    ^p                      przewiniêcie listy o 1 "
+"  ^n                    ^p                    przewiniêcie listy o 1 "
 "liniê\n"
-"  t, Home               e, End                  skok na pocz±tek/koniec "
+"  t, Home               e, End                skok na pocz±tek/koniec "
 "listy\n"
-"  u                     d                       przewiniêcie info o 1 ekran\n"
-"  ^u                    ^d                      przewiniêcie info o 1 liniê\n"
-"  B, Strza³ka-w-lewo    F, Strza³ka-w-prawo     przesuniêcie w bok 1/3 "
+"  u                     d                     przewiniêcie info o 1 ekran\n"
+"  ^u                    ^d                    przewiniêcie info o 1 liniê\n"
+"  B, Strza³ka-w-lewo    F, Strza³ka-w-prawo   przesuniêcie w bok 1/3 "
 "ekranu\n"
-"  ^b                    ^f                      przesuniêcie w bok o 1 znak\n"
+"  ^b                    ^f                    przesuniêcie w bok o 1 znak\n"
 "\n"
 "Zaznaczenie pakietów do pó¼niejszego przetwarzania:\n"
 " +, Insert  instaluj lub aktualizuj =, H  wstrzymaj\n"
@@ -702,7 +700,6 @@ msgid "Keystrokes for method selection"
 msgstr "Spis klawiszy dla wyboru metody instalacji"
 
 #: dselect/helpmsgs.cc:191
-#, fuzzy
 msgid ""
 "Motion keys: Next/Previous, Top/End, Up/Down, Backwards/Forwards:\n"
 "  j, Down-arrow         k, Up-arrow             move highlight\n"
@@ -727,7 +724,7 @@ msgid ""
 "  \\                repeat last search\n"
 msgstr ""
 "Klawisze ruchu: Nastêpny/Poprzedni, Góra/Dó³, Do góry/W dó³:\n"
-"  n, Strza³ka-w-dó³     p, Strza³ka-do-góry     ruch kursora\n"
+"  j, Strza³ka-w-dó³     k, Strza³ka-do-góry     ruch kursora\n"
 "  N, Page-down, Spacja  P, Page-up, Backspace   przewiniêcie listy o 1 "
 "ekran\n"
 "  ^n                    ^p                      przewiniêcie listy o 1 "
@@ -953,7 +950,7 @@ msgstr "czê¶æ widoku"
 
 #: dselect/main.cc:262
 msgid "Null colour specification\n"
-msgstr "specyfikacja pustego koloru\n"
+msgstr "Specyfikacja pustego koloru\n"
 
 #: dselect/main.cc:270 dselect/main.cc:275
 msgid "colour"
@@ -1055,9 +1052,8 @@ msgid "[none]"
 msgstr "[brak]"
 
 #: dselect/methlist.cc:191
-#, fuzzy
 msgid "Explanation"
-msgstr "wyja¶nienie dla "
+msgstr "Wyja¶nienie"
 
 #: dselect/methlist.cc:200
 msgid "No explanation available."
@@ -1392,7 +1388,7 @@ msgstr "zale¿y-przed od"
 
 #: dselect/pkgdisplay.cc:75
 msgid "breaks with"
-msgstr ""
+msgstr "psuje"
 
 #: dselect/pkgdisplay.cc:76
 msgid "conflicts with"
@@ -1607,24 +1603,20 @@ msgstr ""
 "zaznaczyæ pakiety z innych grup."
 
 #: dselect/pkginfo.cc:95
-#, fuzzy
 msgid "Interrelationships"
-msgstr "relacje"
+msgstr "Relacje"
 
 #: dselect/pkginfo.cc:112
-#, fuzzy
 msgid "No description available."
-msgstr "brak dostêpnego opisu."
+msgstr "Brak dostêpnego opisu."
 
 #: dselect/pkginfo.cc:130
-#, fuzzy
 msgid "Installed control file information"
-msgstr "plik kontrolny zainstalowanego pakietu "
+msgstr "Informacje o zainstalowanej wersji pakietu"
 
 #: dselect/pkginfo.cc:146
-#, fuzzy
 msgid "Available control file information"
-msgstr "plik kontrolny dostêpnej wersji pakietu"
+msgstr "Informacje o dostêpnej wersji pakietu"
 
 #: dselect/pkglist.cc:123 dselect/pkglist.cc:124
 msgid "<null>"
@@ -1724,17 +1716,3 @@ msgstr "Zainst."
 msgid "Avail.ver"
 msgstr "Dostêpne"
 
-#~ msgid "interrelationships affecting "
-#~ msgstr "relacje dotycz±ce pakietu "
-
-#~ msgid "description of "
-#~ msgstr "opis pakietu "
-
-#~ msgid "description"
-#~ msgstr "opis"
-
-#~ msgid "currently installed control info"
-#~ msgstr "plik kontrolny zainstalowanego pakietu"
-
-#~ msgid "available version of control info for "
-#~ msgstr "plik kontrolny dostêpnej wersji pakietu "
