--- a/po/pl.po
+++ b/po/pl.po
@@ -4,18 +4,17 @@
 # Bartosz Feñski <fenio@debian.org>, 2004-2005
 # Robert Luberda <robert@debian.org>, 2006 - 2007
 msgid ""
-msgstr ""
-"Project-Id-Version: dpkg 1.14.0\n"
+msgstr "Project-Id-Version: dpkg 1.14.0\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-03-20 23:55+0200\n"
-"PO-Revision-Date: 2007-03-18 15:09+0100\n"
+"PO-Revision-Date: 2007-05-04 22:48+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <pddp@debian.linux.org.pl>\n"
-"MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-2\n"
+"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 ||"
+" n%100>=20) ? 1 : 2;\n"
+"MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8-bit\n"
-"Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2;\n"
 
 #: lib/compat.c:46
 msgid "unable to open tmpfile for vsnprintf"
@@ -60,9 +59,9 @@ msgid "Signal no.%d"
 msgstr "Sygna³ nr %d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s: nie mo¿na wykonaæ `gzip %s'"
+msgstr "%s: nie mo¿na wykonaæ `%s %s'"
 
 #: lib/compression.c:62
 #, c-format
@@ -1119,7 +1118,7 @@ msgstr "dpkg: pakiet %s wymaga reinstalacji i nie zostanie usuniêty.\n"
 #: src/archives.c:903
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "pakiet %s ma zbyt wiele par Conflits/Replaces"
 
 #: src/archives.c:909
 #, c-format
@@ -1585,39 +1584,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "nie mo¿na sprawdziæ istnienia `%.250s'"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " zale¿y od "
+msgstr "%s zale¿y od %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " zale¿y-przed od "
+msgstr "%s zale¿y-przed od %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " poleca "
+msgstr "%s poleca %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " sugeruje "
+msgstr "%s sugeruje %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " przerywa "
+msgstr "%s psuje %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " w konflikcie z "
+msgstr "%s w konflikcie z %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " rozszerza "
+msgstr "%s rozszerza %s"
 
 #: src/depcon.c:269
 #, c-format
@@ -2860,13 +2859,13 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "nie mo¿na zbadaæ stanu nowego pliku `%.250s'"
 
 #: src/processarc.c:674
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
 msgstr ""
-"dpkg: ostrze¿enie - stary plik konfiguracyjny `%.250s' jest taki sam, jak "
-"kilka nowych plików (zarówno `%.250s, jak i `%.250s')"
+"dpkg: ostrze¿enie - stary plik `%.250s' jest taki sam, jak "
+"kilka nowych plików (zarówno `%.250s, jak i `%.250s')\n"
 
 #: src/processarc.c:715
 #, c-format
@@ -3335,7 +3334,7 @@ msgstr "dpkg-deb - b³±d: %s (`%s') nie zawiera ¿adnej cyfry\n"
 #: dpkg-deb/build.c:111
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "nazwa pliku '%s.50s...' jest zbyt d³uga"
 
 #: dpkg-deb/build.c:172
 msgid "--build needs a directory argument"
@@ -3907,7 +3906,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3931,7 +3930,7 @@ msgstr ""
 "  -z#                    Okre¶lenie stopnia kompresji dla budowanego "
 "pakietu.\n"
 "  -Z<typ>                Ustawia rodzaj kompresji podczas budowania.\n"
-"                         Dozwolone warto¶ci: gzip, bzip2, none.\n"
+"                         Dozwolone warto¶ci: gzip, bzip2, lzma, none.\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -5090,7 +5089,7 @@ msgstr ""
 "Copyright (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:78
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5145,7 +5144,7 @@ msgstr ""
 "  --set <nazwa> <¶cie¿ka>  ustawia <¶cie¿kê> jako alternatywê dla <nazwy>.\n"
 "  --all                    wywo³uje --config dla wszystkich alternatyw.\n"
 "\n"
-"<link> jest dowi±zaniem prowadz±cym do /etc/alternatives/<nazwa>.\n"
+"<link> jest dowi±zaniem prowadz±cym do %s/<nazwa>.\n"
 "  (np. /usr/bin/pager)\n"
 "<nazwa> jest g³ówn± nazw± dla tej grupy dowi±zañ.\n"
 "  (np. pager)\n"
@@ -5516,11 +5515,3 @@ msgstr "brakuj±cy znak nowej linii po %s"
 msgid "Serious problem: %s"
 msgstr "Powa¿ny problem: %s"
 
-#~ msgid "%s: failed to exec gzip -dc"
-#~ msgstr "%s: nie mo¿na wywo³aæ gzip -dc"
-
-#~ msgid "%s: failed to exec bzip2 -dc"
-#~ msgstr "%s: nie mo¿na wywo³aæ bzip2 -dc"
-
-#~ msgid "%s: failed to exec bzip2 %s"
-#~ msgstr "%s: nie mo¿na wykonaæ bzip2 %s"
