man/po/pl.po: Update to 997t12f269u.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-04  Robert Luberda <robert@debian.org>
+
+	* po/pl.po: Update to 997t12f269u.
+
 2007-05-02  Guillem Jover  <guillem@debian.org>
 
 	* po/add_de/deb-shlibs.5.de.add: New dummy file.
@@ -22,11 +26,11 @@
 
 2007-03-20  Robert Luberda <robert@debian.org>
 
-	* po/pl.po: Update to 974t18f286u
+	* po/pl.po: Update to 974t18f286u.
 
 2007-03-18  Robert Luberda <robert@debian.org>
 
-	* po/pl.po: Update to 878t92f308u
+	* po/pl.po: Update to 878t92f308u.
 
 2007-03-13  Guillem Jover  <guillem@debian.org>
 
