First Estonian translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -74,6 +74,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Marathi added (Priti Patil). Closes: #416810
   * Kurdish added (Erdal Ronahi). Closes: #418154
   * French (Frédéric Bothamy).
+  * Estonian added (Ivar Smolin). Closes: #422404
 
   [ Updated man pages translations ]
   * Polish (Robert Luberda).
