Generalize source architecture handling by abstracting it through the new Debian triplet.

--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   * Reorder a bit fields in output files.
   * Speed up dpkg-shlibdeps by avoiding doing a dpkg-query for duped
     libraries. Thanks to Aaron M. Ucko. Closes: #421290
+  * Generalize source architecture handling by abstracting it through the new
+    Debian triplet.
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petri?or).
