Add armel support to ostable and triplettable. Closes: #414087

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-05-07  Guillem Jover  <guillem@debian.org>
 
+	* ostable: Add gnueabi-linux.
+	* triplettable: Add gnueabli-linux-arm to armel mapping.
+
+2007-05-07  Guillem Jover  <guillem@debian.org>
+
 	* scripts/controllib.pl (%debtriplet_to_debarch): New variable.
 	(%debarch_to_debtriplet): Likewise.
 	(split_gnu, split_debian): Remove functions.
