--- a/debian/changelog
+++ b/debian/changelog
@@ -66,6 +66,7 @@ dpkg (1.14.0) UNRELEASED; urgency=low
     libraries. Thanks to Aaron M. Ucko. Closes: #421290
   * Generalize source architecture handling by abstracting it through the new
     Debian triplet.
+  * Add armel support to ostable and triplettable. Closes: #414087
 
   [ Updated dpkg translations ]
   * Romanian (Eddy Petri?or).
