* LINGUAS: Estonian is 'et' not 'es'.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
+	* LINGUAS: Estonian is 'et' not 'es'.
+
 2007-05-04  Ivar Smolin
 
 	* et.po: Added with 304t8f608u
