* scripts/update-alternatives.pl: Fix warning when executed w/o any 	option.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl: Fix warning when executed w/o any
+	option.
+
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
 	* Makefile.am (EXTRA_DIST): Rename debian/pseudo-tags to
 	debian/usertags.
 
