* scripts/update-alternatives.pl: Do not exit with an error on 	'--remove' with a non-existing link group file for now, to be 	consistent with the case when trying to remove an non-existing path.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/update-alternatives.pl: Do not exit with an error on
+	'--remove' with a non-existing link group file for now, to be
+	consistent with the case when trying to remove an non-existing path.
+
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Fix warning when executed w/o any
 	option.
 
