* scripts/dpkg-genchanges.pl ($pkgdatadir): New variable. 	* scripts/dpkg-gencontrol.pl: Likewise. 	* scripts/dpkg-source.pl: Likewise. 	* scripts/dpkg-checkbuilddeps.pl: Likewise. 	($dpkglibdir): Change to '..'.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-genchanges.pl ($pkgdatadir): New variable.
+	* scripts/dpkg-gencontrol.pl: Likewise.
+	* scripts/dpkg-source.pl: Likewise.
+	* scripts/dpkg-checkbuilddeps.pl: Likewise.
+	($dpkglibdir): Change to '..'.
+
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/update-alternatives.pl: Do not exit with an error on
 	'--remove' with a non-existing link group file for now, to be
 	consistent with the case when trying to remove an non-existing path.
