--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2007-05-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/controllib.pl (read_cputable): Localize $_.
+	(read_ostable): Likewise.
+	(read_triplettable): Likewise.
+	(parsedep): Check first for the negated architectures.
+	* scripts/dpkg-checkbuilddeps.pl: Do not enable slurp mode globally.
+	Use get_host_arch instead of directly dpkg-architecture.
+
+2007-05-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/dpkg-genchanges.pl ($pkgdatadir): New variable.
 	* scripts/dpkg-gencontrol.pl: Likewise.
 	* scripts/dpkg-source.pl: Likewise.
